[package]
name = "src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.117.0"
rand = "0.8"

[[bin]]
name = "construction"
path = "src/construction.rs"

[[bin]]
name = "game"
path = "src/game.rs"

[[bin]]
name = "snake"
path = "src/snake.rs"

[[bin]]
name = "main"
path = "src/main.rs"